--- a/src/DynamoCoreWpf/UI/Prompts/UsageReportingAgreementPrompt.xaml
+++ b/src/DynamoCoreWpf/UI/Prompts/UsageReportingAgreementPrompt.xaml
@@ -6,22 +6,22 @@
         xmlns:views="clr-namespace:Dynamo.UI.Views"
         WindowStyle="SingleBorderWindow"
         Width="544"
-        Height="640"
+        Height="700"
         ResizeMode="NoResize"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner">
     <Window.Resources>
         <ResourceDictionary Source="{x:Static ui:SharedDictionaryManager.DynamoModernDictionaryUri}" />
     </Window.Resources>
-    <Grid Background="#444444">
+    <Grid Name="mainGrid" Background="#444444">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="100"></RowDefinition>
             <RowDefinition Height="160"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="160"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="85"></RowDefinition>
-            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -53,24 +53,17 @@
         </ScrollViewer>
 
         <ScrollViewer Background="#363636" 
-                      Grid.Row="2"
+                      Grid.Row="3"
                       Grid.Column="0"
                       Grid.ColumnSpan="2"
+                      VerticalScrollBarVisibility="Auto"
                       HorizontalScrollBarVisibility="Disabled"
                       Margin="8,8,8,0">
-            <views:RichTextFile x:Name="ADPAnalyticsConsent"
-                                IsReadOnly="True"
-                                IsEnabled="True"
-                                IsDocumentEnabled="True"
-                                FontSize="10"
-                                Foreground="#888888"
-                                Background="Transparent"
-                                OpenLinksInBrowser="True"
-                                BorderThickness="0" />
+            <WebBrowser x:Name="ADPAnalyticsConsent"/>
         </ScrollViewer>
 
         <CheckBox x:Name="AcceptGoogleAnalyticsCheck"
-                  Grid.Row="3"
+                  Grid.Row="2"
                   Grid.Column="0"
                   Grid.ColumnSpan="2"
                   Click="ToggleIsGoogleAnalyticsChecked"
@@ -86,23 +79,17 @@
                        Name="AcceptGoogleAnalyticsTextBlock"
                        Text="{x:Static p:Resources.ConsentFormGoogleAnalyticsCheckBoxContent}"/>
         </CheckBox>
+        <ScrollViewer 
+                      VerticalScrollBarVisibility="Visible"  
+                      Height="160"
+                      Grid.Row="4"
+                      Grid.ColumnSpan="2"
+                      Margin="8,8,8,0">
+            <StackPanel Name="adpStackPanel" 
+                    Orientation="Vertical">
+            </StackPanel>
+        </ScrollViewer>
 
-        <CheckBox x:Name="AcceptADPAnalyticsCheck"
-                  Grid.Row="4"
-                  Grid.Column="0"
-                  Grid.ColumnSpan="2"
-                  Click="ToggleIsADPAnalyticsChecked"
-                  Visibility="Hidden"
-                  Margin="15,16,15,14"
-                  VerticalAlignment="Center"
-                  Foreground="#4790cd"
-                  FontSize="13.333"
-                  Background="White">
-            <TextBlock FontWeight="SemiBold"
-                       Foreground="#4790cd"
-                       TextWrapping="Wrap"
-                       Name="AcceptADPAnalyticsTextBlock"/>
-        </CheckBox>
 
       <!--The instrumentation checkbox will be hidden and unchecked by default-->
         <CheckBox x:Name="AcceptUsageReportingCheck"
